Bunch of fixes, especially on mobile.

--- a/static/sass/common/panel/panel.scss
+++ b/static/sass/common/panel/panel.scss
@@ -16,6 +16,7 @@
         padding-top: 5px;
         background: transparent;
         padding-left: 0;
+        padding-right: 0;
         border: 0;
 
         .panel-heading-icon {
